--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack":"webpack -d --watch"
+    "webpack": "webpack -d --watch",
+    "start":"nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "css-loader": "^0.27.3",
+    "express": "^4.15.2",
     "style-loader": "^0.16.0"
   }
 }
