--- a/package.json
+++ b/package.json
@@ -6,17 +6,28 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack -d --watch",
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-react": "^6.23.0",
+    "eslint": "^3.18.0",
+    "eslint-plugin-react": "^6.10.3",
     "webpack": "^2.3.1"
   },
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
     "css-loader": "^0.27.3",
     "express": "^4.15.2",
-    "style-loader": "^0.16.0"
+    "file-loader": "^0.10.1",
+    "path": "^0.12.7",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "style-loader": "^0.16.0",
+    "url-loader": "^0.5.8"
   }
 }
